--- a/.gitmodules
+++ b/.gitmodules
@@ -7,7 +7,7 @@
 	branch = 3.0.x
 [submodule "third_party/gflags"]
 	path = third_party/gflags
-	url = https://github.com/gflags/gflags.git
+	url = https://github.com/RealImage/gflags.git
 [submodule "third_party/googletest"]
 	path = third_party/googletest
 	url = https://github.com/google/googletest.git
